--- a/frontend/src/components/pages_components/CarouselLayout.css
+++ b/frontend/src/components/pages_components/CarouselLayout.css
@@ -2,8 +2,8 @@
 img{
     height:100vh;
     width: 100%;
+    object-fit: cover; 
     background-repeat: no-repeat; 
-    background-size: cover; 
     background-position: center center;
 }
 
