--- a/frontend/src/components/pages_components/HomePage.css
+++ b/frontend/src/components/pages_components/HomePage.css
@@ -1,11 +1,3 @@
 .home-page{
-    left: 0;
-    right: 0;
-    top: 0;
-    height:100vh;
-    width: 100vw;
-    background-repeat: no-repeat; 
-    background-size: cover; 
-    background-position: center center;
-    position: absolute;
+    margin-top: -111px;
 }
