--- a/frontend/src/components/pages_components/Services.css
+++ b/frontend/src/components/pages_components/Services.css
@@ -1,7 +1,3 @@
-.home-page{
-    margin-top: -111px;
-}
-
 
 .section-heading{
     letter-spacing: 0.5px;
@@ -10,7 +6,7 @@
   }
 
 
-.features .card{
+.services .card{
     border-radius: 8px;
     box-shadow: none !important;
     border: none !important;
@@ -18,7 +14,7 @@
   
 
   
-  .features .card-body{
+  .services .card-body{
     transform: scale(1.1);
     transition: 0.3s;
   }
@@ -29,7 +25,7 @@
     background-color: #f8f4f4 !important;
   }
 
-  .features .card .card-body h5{
+  .services .card .card-body h5{
     color:rgba(0,0,0,0.8) !important;
     letter-spacing: 1px !important;
   }
