--- a/frontend/src/components/pages_components/Expertise.css
+++ b/frontend/src/components/pages_components/Expertise.css
@@ -1,9 +1,8 @@
 .expertise-container {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    padding: 20px;
-    height: 55vh;
+    justify-content:center;
+    padding: 10px;
   }
   
   .image-section {
@@ -13,33 +12,80 @@
   
   .image-container {
     position: relative;
-    margin-right: 10px;
+    display: flex;
+    justify-content: space-evenly;
   }
 
-.image-gradient-container::after{ 
-    content: '';
-    position: absolute;
-    left: 0; top: 0;
+  @media (max-width: 500px) {
+    .image {
+      width: 100%;
+      height:30vh;
+      display: block;
+    }
+
+    .caption{
+      font-size: 16px;
+    }
+  }
+
+  @media (min-width: 500px) and (max-width: 700px){
+    .image {
+      width: 100%;
+      height:40vh;
+      display: block;
+    }
+
+    .caption{
+      font-size: 20px;
+    }
+  }
+
+
+  @media (min-width: 701px) {
+    .image {
+      width: 100%;
+      height: 55vh;
+      display: block;
+    }
+
+    .caption{
+      font-size: 24px;
+    }
+  }
+
+  @media (min-width: 992px) {
+    .text-section {
+      flex: 1;
+      align-self: center;
+      margin-left: 40px;
+    }
+  }
+
+  /* .image-gradient-container{
+    height: 100%;
     width: 100%;
-    height: 55vh;
-    background: rgb(0,0,0);
-    background: linear-gradient(0deg, rgba(0,0,0,0.5298494397759104) 0%, rgba(0,0,0,0.15449929971988796) 50%, rgba(255,255,255,0) 100%);
-}
-  
-  .image {
-    width: 100%;
-    height: 55vh;
-    display: block;
+    background-image: url('../../assets/background.avif');
+    background-size: cover;
+    background-repeat: no-repeat;
+  } */
+
+  .image-gradient-container::after{ 
+      content: '';
+      position: absolute;
+      left: 0; top: 0;
+      width: 100%;
+      height: 100%;
+      background: rgb(0,0,0);
+      background: linear-gradient(0deg, rgba(0,0,0,0.5298494397759104) 0%, rgba(0,0,0,0.15449929971988796) 50%, rgba(255,255,255,0) 100%);
   }
   
   .caption {
     position:absolute;
     bottom: 10px;
     width:100%;
-    color: white;
+    color: rgb(240, 240, 240);
     padding: 5px;
     font-weight: bold;
-    font-size: 24px;
     width: 100%;
     text-align:center;
   }
@@ -62,6 +108,6 @@
     line-height: 1.5;
     color: #040404;
     font-family: "open sans", sans-serif;
-    word-spacing: 5px;
-    letter-spacing: 2px;
+    word-spacing: 3px;
+    letter-spacing: 1px;
   }
