--- a/frontend/src/components/pages_components/Reviews.css
+++ b/frontend/src/components/pages_components/Reviews.css
@@ -3,7 +3,6 @@
     text-align: center;
     background-color: #333;
     color: white;
-    padding: 20px;
     font-family: Arial, sans-serif;
     padding-top: 50px;
     padding-bottom: 50px;
@@ -83,5 +82,8 @@
     .profile {
       width: calc(100% - 40px);
     }
+    .arrow {
+        font-size: 1em;
+      }
   }
   
