--- a/frontend/src/components/pages_components/ProjectDetails.css
+++ b/frontend/src/components/pages_components/ProjectDetails.css
@@ -31,7 +31,7 @@ p {
     border-radius: 10px;
 }
 
-.project-header {
+.project-header-1 {
     position:inherit;
     display: flex;
     align-items: center;
@@ -45,7 +45,7 @@ p {
 }
 
 
-.project-header:before {
+.project-header-1:before {
     content: '';
     position: absolute;
     top: 0;
