scroll to top added ss

--- a/frontend/src/components/common_components/GoTop.css
+++ b/frontend/src/components/common_components/GoTop.css
@@ -12,8 +12,8 @@
 }
 
 @media (max-width: 800px){
-    .floating-button{
-        bottom: 25px;
+    .floating-button-top{
+        bottom: 100px;
         right: 25px;
     }
 }
