--- a/frontend/src/components/pages_components/Reviews.css
+++ b/frontend/src/components/pages_components/Reviews.css
@@ -7,6 +7,10 @@
     padding-top: 50px;
     padding-bottom: 50px;
   }
+
+  .reviews-p{
+    text-align: center;
+  }
   
   .reviews-carousel {
     display: flex;
@@ -31,6 +35,8 @@
     text-align: center;
     flex: 0 0 auto;
     box-sizing: border-box;
+    overflow: hidden;
+    height: 400px;
   }
   
   .profile-name {
