--- a/frontend/src/components/pages_components/Reviews.css
+++ b/frontend/src/components/pages_components/Reviews.css
@@ -92,4 +92,14 @@
         font-size: 1em;
     }
   }
+
   
+  .review-leftright-icons{
+    font-size: 50px;
+}
+
+@media only screen and (max-width: 400px) {
+    .review-leftright-icons {
+      font-size: 30px;
+    }
+  }
